--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,10 +1,53 @@
-.div{
-    background-color: red;
 
+.div {
+  max-width: 80%;
+  max-height: 80%;
+  padding: 20px;
+  border-radius: 20px;
+  transition: background-color 0.3s ease-in-out;
+  display: inline-table;
+  text-align: center;
 }
 
-.h1{
-    background-color: aqua;
+
+.h1 {
+  width: auto;
+  background-color: rgba(9, 182, 75, 0.377);
+  border-radius: 20px;
+  font-size: 72px;
+  margin: 0;
+  padding: 0;
+  color: #f8f5f5;
+}
+
+.p1 {
+  width: auto;
+  background-color: rgba(235, 5, 5, 0.445);
+  border-radius: 20px;
+  font-size: 72px;
+  margin: 0;
+  padding: 0;
+  color: #f8f5f5;
+}
+
+.p {
+  width: auto;
+  background-color: rgba(235, 5, 5, 0.39);
+  border-radius: 20px;
+  font-size: 42px;
+  color: #f8f5f5;
+  text-align: center;
+  align-items: center;
+}
+
+.img {
+  max-width: 100%;
+  border-radius: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.img:hover {
+  transform: scale(1.1);
 }
 
 
