--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -1,3 +1,80 @@
+.div {
+    margin: 5%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    align-content: normal;
+    max-width: 90%;
+    border-radius: 20px;
+    background: #0500003d;
+    box-shadow: 5px 5px 15px #08d15c, -5px -5px 15px #b60808;
+    padding: 0px;
+  }
+  
+  /* Adjust the layout for smaller screens */
+  @media (max-width: 768px) {
+    .div {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .buttonT,
+    .buttonL,
+    .buttonR {
+      margin-bottom: 10px;
+    }
+  }
+  
+  .buttonR,
+  .buttonL,
+  .buttonT {
+    padding: 0.5em 1.2em;
+    border: none;
+    border-radius: 20px;
+    position: relative;
+    overflow: hidden;
+    background-color: transparent;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 28px;
+    transition: 0.3s;
+    z-index: 1;
+    font-family: inherit;
+    color: #17c3b2;
+  }
+  
+  .buttonR::before,
+  .buttonL::before,
+  .buttonT::before {
+    content: '';
+    width: 0;
+    height: 300%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background: #17c3b2;
+    transition: 0.5s ease;
+    display: block;
+    z-index: -1;
+  }
+  
+  .buttonR:hover::before,
+  .buttonL:hover::before,
+  .buttonT:hover::before {
+    width: 105%;
+  }
+  
+  .buttonR:hover,
+  .buttonL:hover,
+  .buttonT:hover {
+    color: #111;
+  }
+  
+
+/*
 .div{
     margin: 5%;
     display: flex;
@@ -59,7 +136,7 @@
     
 
 /**/
-
+/*
 .buttonL{
     padding: 0.5em 1.2em; 
     border: none; 
@@ -107,7 +184,7 @@
 
 /**/
 
-
+/*
 .buttonT {
     padding: 0.5em 1.2em; 
     border: none; 
@@ -150,3 +227,4 @@
 
 
 
+*/
