--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -51,3 +51,49 @@
 }
 
 
+.ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  gap: 10px;
+  justify-content: center; 
+  
+}
+
+.li {
+  margin: 10px 0;
+}
+
+.a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #00a0d4;
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+.a:hover {
+  background-color: #007f9e;
+}
+
+
+.a[href*="mail.google.com"] {
+  background-color: #ec008c;
+}
+
+.a[href*="wa.me"] {
+  background-color: #00c853;
+}
+
+.a[href*="linkedin.com"] {
+  background-color: #0077b5;
+}
+
+.a[href*="github.com"] {
+  background-color: #333;
+}
