--- a/src/components/Detail.module.css
+++ b/src/components/Detail.module.css
@@ -1,7 +1,27 @@
-.img{
-    background-color: red;
-    color: blue;
-    width: 1200px;
-    height: 1200px;
+@keyframes giro {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
+.div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+}
+
+.img {
+  position: relative;
+    align-items: center;
+    width: 100px;
+    animation: giro 4s linear infinite;
+    transition: width 0.3s; 
+}
+
+.img:hover {
+    width: 500px;
 }
