--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -1,12 +1,13 @@
 
+
 .input {
     margin: 30px;
     background: rgba(250, 2, 2, 0.562);
     border: none;
     outline: none;
-    max-width: 800px;
+    width: 100%;
     padding: 10px 20px;
-    font-size: 28px;
+    font-size: 2rem;
     border-radius: 9999px;
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: #23ff06;
@@ -18,13 +19,14 @@
     background: rgba(250, 250, 250, 0.596);
     border: none;
     outline: none;
-    max-width: 800px;
+    width: 100%;
     padding: 10px 20px;
-    font-size: 28px;
+    font-size: 2rem;
     border-radius: 9999px;
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: red; 
 }
+
 
 .nav .button {
     padding: 0.5em 1.2em; 
@@ -35,7 +37,7 @@
     background-color: transparent;
     text-align: center;
     text-transform: uppercase;
-    font-size: 28px; 
+    font-size: 2rem; 
     transition: .3s;
     z-index: 1;
     font-family: inherit;
