--- a/client/src/components/About.module.css
+++ b/client/src/components/About.module.css
@@ -24,7 +24,7 @@
   width: auto;
   background-color: rgba(235, 5, 5, 0.445);
   border-radius: 20px;
-  font-size: 72px;
+  font-size: 24px;
   margin: 0;
   padding: 0;
   color: #f8f5f5;
@@ -34,7 +34,7 @@
   width: auto;
   background-color: rgba(235, 5, 5, 0.39);
   border-radius: 20px;
-  font-size: 42px;
+  font-size: 24px;
   color: #f8f5f5;
   text-align: center;
   align-items: center;
@@ -60,6 +60,11 @@
   
 }
 
+.li:hover{
+  width: 20%;
+  height: 20%;
+}
+
 .li {
   margin: 10px 0;
 }
@@ -79,6 +84,7 @@
 
 .a:hover {
   background-color: #007f9e;
+  
 }
 
 
