--- a/client/src/components/Card.module.css
+++ b/client/src/components/Card.module.css
@@ -1,17 +1,21 @@
 
 .card1 {
-    margin: 20px;
+    margin: 10px;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 100%; 
-    max-height: 800px;
+    max-width: 20%;
+    min-width: 200px; 
+    max-height: 30%;
+    min-height: 300px;
     border-radius: 20px;
     background: #e0e0e0;
     box-shadow: 5px 5px 15px #08d15c, -5px -5px 15px #b60808;
-    padding: 20px;
+    padding: 0;
     text-align: center;
+   
 }
 
 @media (max-width: 600px) {
@@ -25,7 +29,7 @@
     font-family: cursive;
     font-style: italic;
     transition: ease-in;
-    line-height: 0.01;
+  
 }
 
 .datos:hover {
@@ -40,7 +44,7 @@
 }
 
 .name {
-    font-size: 36px;
+    font-size: 22px;
     font-family: cursive;
     font-style: italic;
     animation: textoDegradado 5s infinite;
@@ -82,18 +86,28 @@ height: 1px;
 
 .img {
     margin: 10px;
-    width: auto;
+    width: 70%;
     height: auto;
     border-radius: 20px;
     background: #050505;
     box-shadow: 20px 20px 60px #bebebe;
+
+
+
 }
 
-@media (max-width: 600px) {
-    .img {
-        margin: 5px; 
-        }
+
+.img:hover
+{
+position: relative;
+
+animation: giro 4s linear infinite;
 }
+
+
+
+
+
 
 @keyframes giro {
     0% {
@@ -122,7 +136,7 @@ height: 1px;
 .buttonF{
     display: flex;
     position: relative;
-    left: 150px;
+    justify-content: center;
     border-radius: 50px;
     background: #050505;
     box-shadow: 20px 20px 60px #bebebe;
@@ -142,7 +156,7 @@ height: 1px;
 .buttonF2{
     display: flex;
     position: relative;
-    right: 150px;
+    justify-content: center;
     border-radius: 50px;
     background: #050505;
     box-shadow: 20px 20px 60px #bebebe;
@@ -157,3 +171,5 @@ height: 1px;
     
     animation: giro 4s linear infinite;
 }
+
+
