--- a/client/src/components/Favorites.module.css
+++ b/client/src/components/Favorites.module.css
@@ -1,9 +1,10 @@
 .div{
-    display: inline-flex;
-    flex-direction: row;
+    display: flex;
+    flex-direction: row ;
     flex-wrap: nowrap;
-    justify-content: space-between;
-    max-width: 80%;
+    max-width: 100%;
+    align-content: center;
+    align-items: center;
     
 
 }
@@ -16,7 +17,7 @@
     outline: none;
     width: 50%;
     padding: 10px 20px;
-    font-size: 2rem;
+    font-size: 18px;
     border-radius: 9999px;
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: #23ff06;
@@ -30,9 +31,8 @@
     background: rgba(250, 250, 250, 0.596);
     border: none;
     outline: none;
-  
     padding: 10px 20px;
-    font-size: 2rem;
+    font-size: 18px;
     border-radius: 9999px;
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: red; 
