--- a/client/src/components/SearchBar.module.css
+++ b/client/src/components/SearchBar.module.css
@@ -1,13 +1,24 @@
+.nav{
+    
+    margin: 0;
+    position: relative;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    align-content: normal;
+    max-width: 90hw;
+    max-height: 90hv;
 
+}
 
 .input {
-    margin: 30px;
+    margin: 10px;
     background: rgba(250, 2, 2, 0.562);
     border: none;
     outline: none;
-    width: 100%;
+    width: 90%;
     padding: 10px 20px;
-    font-size: 2rem;
+    font-size: 20px;
     border-radius: 9999px;
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: #23ff06;
@@ -15,13 +26,13 @@
 }
 
 .input:hover{
-    margin: 30px;
+    margin: 10px;
     background: rgba(250, 250, 250, 0.596);
     border: none;
     outline: none;
-    width: 100%;
+    width: 90%;
     padding: 10px 20px;
-    font-size: 2rem;
+    font-size: 20px;
     border-radius: 9999px;
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: red; 
@@ -37,7 +48,7 @@
     background-color: transparent;
     text-align: center;
     text-transform: uppercase;
-    font-size: 2rem; 
+    font-size: 20px; 
     transition: .3s;
     z-index: 1;
     font-family: inherit;
