--- a/client/src/components/Cards.module.css
+++ b/client/src/components/Cards.module.css
@@ -1,12 +1,12 @@
 .div{
     
+   
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 80%;
-    
-    
+    max-width: 100%;
+    align-items: stretch;
 
 }
 
