--- a/client/src/components/Favorites.module.css
+++ b/client/src/components/Favorites.module.css
@@ -37,3 +37,15 @@
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: red; 
 }
+
+.p {
+    font-family: "Futurama Bold";
+    font-size: 26px;
+    text-transform: uppercase;
+    color: #0aff02;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.959);
+}
+
+.p:hover {
+    color: rgb(243, 3, 3);
+}
